<resources>
    <string name="app_name">Google Pay Sample</string>
    <string name="symbol_minis">—</string>
    <string name="symbol_plus">+</string>
    <string name="title_shopping_cart">Shopping Card</string>
    <string name="total_amount">Total amount</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="zero_dollars">$ 0</string>
    <string name="format_dollar">$%s</string>
    <string name="enter_credit_card">Buy with credit card</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="label_enter_credit_card">Enter credit card</string>
    <string name="scan_credit_card">Scan credit card</string>
    <string name="pay">Pay</string>
</resources>
