<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.tenbis.library.views.CompactCreditCardInput
            android:id="@+id/compact_credit_card_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:label_text="@string/label_enter_credit_card"
            app:label_text_color="@color/colorBlack_70" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/scan_credit_card"
            android:textColor="@color/colorRed"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.35"
                android:text="@string/total_amount"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zero_dollars"
                android:textColor="@color/colorRed"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="$765.8" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/btn_bg_color_selector"
            android:enabled="false"
            android:text="@string/pay"
            android:textColor="@color/white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3490dc"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/loader_and_success"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
    </FrameLayout>

</FrameLayout>