<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="@color/colorWhite"
    android:elevation="2dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Backless Silver" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_maker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:alpha="0.35"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name"
            tools:text="by IKEA" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:includeFontPadding="false"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:text="$30" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_without_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.35"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_price"
            app:layout_constraintStart_toEndOf="@+id/text_price"
            app:layout_constraintTop_toTopOf="@+id/text_price"
            tools:text="$150" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/text_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_price">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:text="@string/symbol_minis"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:alpha="0.5"
                android:background="@drawable/bg_edit_counts"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:minWidth="15dp"
                android:paddingStart="6dp"
                android:paddingTop="2dp"
                android:paddingEnd="6dp"
                android:paddingBottom="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                tools:text="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:text="@string/symbol_plus"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>